<resources>
    <string name="app_name">Online Shop</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="usernameHint">Username:</string>
    <string name="passwordHint">Password:</string>
    <string name="emailHint">Email:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="home">HOME</string>
    <string name="menu">MENU</string>
    <string name="account">ACCOUNT</string>
    <string name="bag">BAG</string>
    <string name="purchase_history">Purchase history</string>
    <string name="my_profile">My profile</string>
    <string name="email">Email</string>
    <string name="end_session">End Session</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password:</string>
    <string name="old_password">Old password:</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="back">Back</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="add">Add</string>
    <string name="rsd">RSD</string>
    <string name="status">Status:</string>
    <string name="price">Price:</string>
    <string name="itemname">ItemName</string>
    <string name="add_new_item">Add new Item:</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_category">Item Category</string>
    <string name="add_new_category">Add new Category:</string>
    <string name="category_name">Category name</string>
</resources>